--- a/src/components/ChannelContent/ChannelContent.scss
+++ b/src/components/ChannelContent/ChannelContent.scss
@@ -1,19 +1,19 @@
-// .header{
-//     position: absolute;
-//     // width: 100%;
-//     width: 1478px;
-//     height: 400px;
-//     top: 60px;
-//     left: 14.468%;
-//     background-color: red;
-//     display: flex;
-//     justify-content: center;
-//     div{
-//         width: 1478px;
-//         height: 100px;
-//         background: yellow;
-//     }
-// }
+.headers{
+    // position: absolute;
+    // width: 100%;
+    width: 1478px;
+    height: 400px;
+    // top: 60px;
+    left: 14.468%;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    // div{
+    //     width: 1478px;
+    //     height: 100px;
+    //     background: yellow;
+    // }
+}
 
 // .header_container {
 //     // padding: 0 94px;
