channel title 구성, sidebar 수정

--- a/src/components/Sidebar/Sidebars.scss
+++ b/src/components/Sidebar/Sidebars.scss
@@ -46,6 +46,9 @@
             &_content {
                 margin-left: 20px;
                 font-size: 1.2rem;
+                // line-height: 1.2rem;
+                // display: flex;
+                // align-items: center;
             }
         }
 
