--- a/src/components/ChannelContent/ChannelContent.scss
+++ b/src/components/ChannelContent/ChannelContent.scss
@@ -1,25 +1,120 @@
-.headers{
-    // position: absolute;
-    // width: 100%;
-    width: 1478px;
-    height: 400px;
-    // top: 60px;
-    left: 14.468%;
-    background-color: red;
+.channel {
+    height: 100vh;
+    background-color: #212121;
     display: flex;
-    justify-content: center;
-    // div{
-    //     width: 1478px;
-    //     height: 100px;
-    //     background: yellow;
-    // }
-}
+    flex-direction: column;
 
-// .header_container {
-//     // padding: 0 94px;
-//     width: 90%;
-//     width: 1284px;
-//     // width: 500px;
-//     height: 400px;
-//     background: aqua;
-// }
+    &_headers {
+        background: #212121;
+
+        hr {
+            background: rgba(255, 255, 255, 0.1);
+            height: 1px;
+            border: none;
+        }
+    }
+
+    &_content {
+        height: 400px;
+        background: yellow;
+        background: #212121;
+    }
+
+    &_profile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        &_container {
+            width: 1284px;
+            display: flex;
+            margin: 16px 0 4px 0;
+            align-items: center;
+        }
+
+        &_image_container {
+            width: 80px;
+            height: 80px;
+            margin-right: 20px;
+        }
+
+        &_image {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+        }
+
+        &_content {
+            &_container {
+                width: 1180px;
+                display: flex;
+                align-items: center;
+            }
+
+            &_meta {
+                width: 958px;
+                color: #fff;
+            }
+
+            &_button {
+                width: 222px;
+            }
+
+            &_name {
+                font-size: 24px;
+            }
+
+            &_sub {
+                font-size: 15px;
+            }
+
+            &_button_container {
+                display: flex;
+                align-items: center;
+            }
+
+            &_button {
+                width: 110px;
+                font-size: 14px;
+                padding: 10px;
+                background: #3ea6ff;
+                border-radius: 24px;
+                text-align: center;
+                color: #000;
+                font-weight: 500;
+                margin-right: 5px;
+            }
+        }
+    }
+
+    &_tab {
+        &_container {
+            display: flex;
+            justify-content: center;
+        }
+
+        &_inner_container {
+            width: 1284px;
+            display: flex;
+            align-items: center;
+
+            &:first-child {
+                margin-left: 10px;
+            }
+        }
+
+        &_item {
+            padding: 24px 30px 14px;
+            font-size: 14px;
+            color: #fff;
+            text-align: center;
+
+            &:first-child {
+                border-bottom: 3px solid #eee;
+            }
+
+        }
+    }
+
+}
