--- a/src/pages/ChannelPage/Channel.scss
+++ b/src/pages/ChannelPage/Channel.scss
@@ -1,4 +1,4 @@
-.container{
+.channel_containers{
     background: #212121;
 }
 
@@ -18,4 +18,9 @@
 
 .channel_mains_container {
     margin-top: -60px;
+}
+
+.channel_details_container{
+    width: 1478px;
+    height: 100vh;
 }
