디자인 변경, upload 기능 보는중

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,6 +21,10 @@
         align-items: center;
     }
 
+    &_nav_button{
+        cursor: pointer;
+    }
+
     &_logo {
         margin-left: 20px;
         cursor: pointer;
