--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -103,6 +103,7 @@
             align-items: center;
             font-size: 14px;
             line-height: 20px;
+            cursor: pointer;
 
             &_container {
                 margin-top: 26px;
