--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
     background-color: #212121;
-    /* width: 250px; */
-    width: 14.468%;
+    width: 250px;
+    // width: 14.468%;
     /* width: 13.021vw; */
     display: flex;
     justify-content: center;
