--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
-.nav_toggle{
-  
+::-webkit-scrollbar {
+  width: 16px;
+  height: 8px;
+  border-radius: 6px;
+  background: rgba(255, 255, 255, 0.4);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
 }
