--- a/src/components/Categorybar/Categorybar.scss
+++ b/src/components/Categorybar/Categorybar.scss
@@ -3,6 +3,7 @@
     width: 85.6%;
     height: 56px;
     background-color: #212121;
+    z-index: 100;
 
     &_container {
         /* width: 930px; */
