--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,17 +2,20 @@
     display: flex;
     height: 60px;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     background-color: #212121;
+    z-index: 100;
 
     &_container {
-        width: 98vw;
+        width: 100%;
         height: 60px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        padding: 0 16px;
+        box-sizing: border-box;
     }
 
     &_left {
@@ -22,14 +25,18 @@
     }
 
     &_nav_button{
+        display: flex;
+        align-items: center;
         cursor: pointer;
+        padding: 8px;
     }
 
     &_logo {
-        margin-left: 20px;
+        // margin-left: 20px;
         cursor: pointer;
-        font-size: 1.6rem;
+        font-size: 24px;
         color: #fff;
+        padding: 16px 18px 14px;
     }
 
     &_center {
