--- a/src/components/Header/StudioHeader.scss
+++ b/src/components/Header/StudioHeader.scss
@@ -2,18 +2,19 @@
     display: flex;
     height: 64px;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     background-color: #282828;
     box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
     z-index: 100;
 
     &_container {
-        width: 98vw;
+        width: 100%;
         height: 64px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        padding: 0 16px;
         align-items: center;
     }
 
@@ -24,14 +25,17 @@
     }
 
     &_nav_button{
+        display: flex;
+        align-items: center;
         cursor: pointer;
+        padding: 8px;
     }
 
     &_logo {
-        margin-left: 20px;
         cursor: pointer;
-        font-size: 1.6rem;
+        font-size: 24px;
         color: #fff;
+        padding: 16px 18px 14px;
     }
 
     &_center {
