--- a/src/pages/LandingPage/Landing.scss
+++ b/src/pages/LandingPage/Landing.scss
@@ -1,6 +1,6 @@
 .landing_containers {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background: #212121;
@@ -8,15 +8,15 @@
 
 .headers_container {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 60px;
 }
 
 .landing_contents_container {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    margin-top: 60px;
+    // margin-top: 60px;
 }
 
 .landing_sidebars_container {
