--- a/src/pages/StudioPage/Studio.scss
+++ b/src/pages/StudioPage/Studio.scss
@@ -4,13 +4,13 @@
 
 .studio_headers_container {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 64px;
     background: #282828;
 }
 
 .studio_sidebars_container{
     display: flex;
-    width: 250px;
+    width: 256px;
     height: 100vh;
 }
