--- a/src/pages/LandingPage/Landing.scss
+++ b/src/pages/LandingPage/Landing.scss
@@ -32,6 +32,7 @@
     flex-direction: column;
     width: 1462px;
     width: 85.3972%;
+    // width: 100%;
     height: 100vh;
     // background: aqua;
 }
@@ -39,11 +40,13 @@
 .landing_categorys_container{
     width: 1478px;
     width: 85.3972%;
+    width: 100%;
     height: 56px;
 }
 
 .landing_details_container{
     width: 1478px;
     width: 85.3972%;
+    width: 100%;
     height: 100vh;
 }
