--- a/src/components/Header/StudioHeader.scss
+++ b/src/components/Header/StudioHeader.scss
@@ -1,3 +1,6 @@
+@import '../../styles/common.scss';
+
+
 .studio_header {
     display: flex;
     height: 64px;
@@ -52,7 +55,7 @@
     }
 }
 
-.search {
+.studio_search {
     &_box {
         height: 40px;
         display: flex;
