--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -1,3 +1,5 @@
+@import '../../styles/common.scss';
+
 .content {
     width: 100%;
     margin-top: 56px;
@@ -6,7 +8,7 @@
         grid-template-columns: repeat(4, auto);
         grid-template-rows: repeat(4, auto);
         background: red;
-        background-color: #212121;
+        background-color: var(--main-background);
         padding: 20px;
         padding-top: 24px;
 
@@ -18,7 +20,7 @@
         display: flex;
         flex-direction: row;
         background: aqua;
-        background-color: #212121;
+        background-color: var(--main-background);
     }
 
     &_profile_image {
