--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,13 @@
+@import '../../styles/common.scss';
+
+
 .header {
     display: flex;
     height: 60px;
     justify-content: center;
     width: 100%;
     position: fixed;
-    background-color: #212121;
+    background-color: var(--main-background);
     z-index: 100;
 
     &_container {
@@ -68,7 +71,7 @@
         border: 1px solid #fff;
         border-right: none;
         border-radius: 40px 0 0 40px;
-        background-color: #212121;
+        background-color: var(--main-background);;
     }
 
     &_form {
@@ -81,7 +84,7 @@
         height: 30px;
         width: 500px;
         color: #fff;
-        background-color: #212121;
+        background-color: var(--main-background);
         outline: none;
         padding: 2px 6px;
     }
