--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,9 +1,10 @@
 .sidebar {
-    background-color: #212121;
+    background-color: #0f0f0f;
     width: 250px;
     display: flex;
     justify-content: center;
     position: fixed;
+    margin-top: 10px;
 
     &_list {
         margin: 0;
@@ -22,34 +23,41 @@
             }
         }
 
-        li {
+        &_item {
             display: flex;
             justify-content: flex-start;
             list-style: none;
-            padding: 10px 12px;
+            // padding: 10px 12px;
             color: #fff;
             align-items: center;
             font-size: 12px;
             font-weight: 400;
-            line-height: 24px;
-        }
+            padding: 0 12px;
 
-        &_item {
+            &:hover {
+                border-radius: 10px;
+                background: #000;
+            }
+
+            // line-height: 20px;
+
             &_box {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+                height: 40px;
+
             }
 
             &_content {
                 width: 132px;
-                margin-left: 20px;
+                margin-left: 25px;
                 font-size: 0.8rem;
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
+                // line-height: 20px;
             }
         }
-
     }
 }
