--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,3 +1,5 @@
 :root{
     --main-background: #0f0f0f;
+    --searchbar-border-color: hsl(0, 0%, 18.82%);
+    --searchbar-button-color: hsla(0, 0%, 100%, 0.08);
 }
