--- a/src/components/ChannelContent/ChannelContent.scss
+++ b/src/components/ChannelContent/ChannelContent.scss
@@ -108,17 +108,23 @@
         &_item {
             padding: 24px 30px 14px;
             font-size: 14px;
-            color: #fff;
+            color: rgba(255, 255, 255, 0.3);
             text-align: center;
+
+            &:hover {
+                color: #fff;
+            }
 
             &:first-child {
                 border-bottom: 3px solid #eee;
+                color: #fff;
             }
 
         }
     }
 }
 
-.active{
-    
+.channel_tab_item_active {
+    border-bottom: 3px solid #eee;
+    color: #fff;
 }
