page 구조 수정, shortspage 추가중

--- a/src/components/ChannelContent/ChannelContent.scss
+++ b/src/components/ChannelContent/ChannelContent.scss
@@ -1,6 +1,9 @@
 @import '../../styles/common.scss';
 
 .channel {
+    width: 85.3972%;
+    margin-left: 250px;
+    padding-top: 60px;
     height: 100vh;
     background-color: var(--main-background);
     display: flex;
