--- a/src/components/Sidebar/StudioSidebar.scss
+++ b/src/components/Sidebar/StudioSidebar.scss
@@ -4,6 +4,7 @@
     // margin-top: 1px;
     background-color: #282828;
     width: 256px;
+    margin-top: 64px;
     // width: 14.468%;
     /* width: 13.021vw; */
     display: flex;
