--- a/src/components/Categorybar/Categorybar.scss
+++ b/src/components/Categorybar/Categorybar.scss
@@ -6,6 +6,8 @@
     height: 56px;
     background-color: var(--main-background);
     z-index: 100;
+    margin-top: 60px;
+    margin-left: 250px;
 
     &_container {
         /* width: 930px; */
