--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     position: fixed;
-    margin-top: 10px;
+    margin-top: 60px;
 
     &_list {
         margin: 0;
@@ -36,6 +36,11 @@
             font-size: 12px;
             font-weight: 400;
             padding: 0 12px;
+
+            a{
+                text-decoration: none;
+                color: inherit;
+            }
 
             &:first-of-type{
                 border-radius: 10px;
