root css 수정, routing 수정, sidebar active 수정

--- a/src/components/Categorybar/Categorybar.scss
+++ b/src/components/Categorybar/Categorybar.scss
@@ -4,7 +4,7 @@
     position: fixed;
     width: 85.3972%;
     height: 56px;
-    background-color: var(--main-background);
+    background-color: var(--main-bg);
     z-index: 100;
     margin-top: 60px;
     margin-left: 250px;
