--- a/src/components/Sidebar/StudioSidebar.scss
+++ b/src/components/Sidebar/StudioSidebar.scss
@@ -2,7 +2,7 @@
 
 .studio_sidebar {
     // margin-top: 1px;
-    background-color: #282828;
+    background-color: var(--studio-bg);
     width: 256px;
     margin-top: 64px;
     // width: 14.468%;
