--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,5 +1,6 @@
 :root{
-    --main-background: #0f0f0f;
+    --main-bg: #0f0f0f;
+    --studio-bg : #282828;
     --searchbar-border-color: hsl(0, 0%, 18.82%);
     --searchbar-button-color: hsla(0, 0%, 100%, 0.08);
 }
