--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -4,15 +4,15 @@
     width: 85.3972%;
     margin-left: 250px;
     padding-top: 116px;
+    
     &_grid {
         display: grid;
         grid-template-columns: repeat(4, auto);
         grid-template-rows: repeat(4, auto);
         background: red;
-        background-color: var(--main-background);
+        background-color: var(--main-bg);
         padding: 20px;
         padding-top: 24px;
-
     }
 
     &_box {
@@ -21,7 +21,7 @@
         display: flex;
         flex-direction: row;
         background: aqua;
-        background-color: var(--main-background);
+        background-color: var(--main-bg);
     }
 
     &_profile_image {
