--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     width: 100%;
     position: fixed;
-    background-color: var(--main-background);
+    background-color: var(--main-bg);
     z-index: 100;
 
     &_container {
