--- a/src/components/ChannelContent/ChannelContent.scss
+++ b/src/components/ChannelContent/ChannelContent.scss
@@ -118,10 +118,10 @@
                 color: #fff;
             }
 
-            &:first-child {
-                border-bottom: 3px solid #eee;
-                color: #fff;
-            }
+            // &:first-child {
+            //     border-bottom: 3px solid #eee;
+            //     color: #fff;
+            // }
 
         }
     }
