--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -4,7 +4,7 @@
     width: 85.3972%;
     margin-left: 250px;
     padding-top: 116px;
-    
+
     &_grid {
         display: grid;
         grid-template-columns: repeat(4, auto);
@@ -15,6 +15,10 @@
         padding-top: 24px;
     }
 
+    &_container{
+        // position: relative;
+    }
+
     &_box {
         width: 340px;
         height: 320px;
@@ -22,11 +26,17 @@
         flex-direction: row;
         background: aqua;
         background-color: var(--main-bg);
+        
     }
 
-    &_profile_image {
+    &_profile_video {
         width: 100%;
         border-radius: 12px;
+        // &:hover{
+        //     position: absolute;
+        //     width: 500px;
+        //     z-index: 10;
+        // }
     }
 
     &_detail {
