--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -32,11 +32,11 @@
     &_profile_video {
         width: 100%;
         border-radius: 12px;
-        // &:hover{
-        //     position: absolute;
-        //     width: 500px;
-        //     z-index: 10;
-        // }
+        &:hover{
+            position: absolute;
+            width: 500px;
+            z-index: 10;
+        }
     }
 
     &_detail {
