--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -1,1 +1,31 @@
 @import '../../styles/common.scss';
+
+.detail_container{
+    display: flex;
+    flex-direction: row;
+    padding: 0 20px;
+    padding-top: 60px;
+}
+
+.detail_content_container{
+    display: flex;
+    flex-direction: column;
+    width: 1250px;
+    height: 2000px;
+    background: red;
+    margin-right: 30px;
+}
+
+.detail_content_video_container{
+    width: 500px;
+
+    video{
+        width: 100%;
+    }
+}
+
+.detail_playlist_container{
+    width: 450px;
+    height: 2000px;
+    background: beige;
+}
