category, channel content refactoring

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -49,7 +49,7 @@
 
             &:hover {
                 border-radius: 10px;
-                background: rgba(255,255,255,0.1);
+                background: var(--sidebar-bt-bg);
             }
 
             &_box {
@@ -74,5 +74,5 @@
 
 .sidebar_list_item_active{
     border-radius: 10px;
-    background: rgba(255,255,255,0.1);
+    background: var(--sidebar-bt-bg);
 }
