--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,6 +1,8 @@
-:root{
+:root {
     --main-bg: #0f0f0f;
-    --studio-bg : #282828;
+    --sidebar-bt-bg: rgba(255, 255, 255, 0.1);
+    --category-bt-bg: rgba(255, 255, 255, 0.1);
+    --studio-bg: #282828;
     --searchbar-border-color: hsl(0, 0%, 18.82%);
     --searchbar-button-color: hsla(0, 0%, 100%, 0.08);
 }
