--- a/src/components/Categorybar/Categorybar.scss
+++ b/src/components/Categorybar/Categorybar.scss
@@ -5,49 +5,40 @@
     width: 85.3972%;
     height: 56px;
     background-color: var(--main-bg);
+    margin: 60px 0 0 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 100;
-    margin-top: 60px;
-    margin-left: 250px;
 
     &_container {
-        /* width: 930px; */
-        width: 68.8735%;
-        // width: 100%;
-        // background: red;
+        width: 70%;
         display: flex;
-        justify-content: flex-start;
-        // justify-content: space-between;
+        align-items: center;
         height: 56px;
-        /* background: #fff; */
-        margin: 0 auto;
     }
+}
 
-    &_item {
+.category_item_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    white-space: nowrap;
+    font-size: 0.8rem;
+    margin: 8px;
+    height: 32px;
+    padding: 0 15px;
+    border-radius: 8px;
+    overflow: hidden;
+    cursor: pointer;
+    background: var(--category-bt-bg);
+    color: #fff;
+
+    div {
         max-width: 20rem;
         display: block;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
-
-        &_container {
-            margin: 12px;
-            height: 32px;
-            min-width: 12px;
-            padding: 0 10px;
-            border-radius: 8px;
-            box-sizing: border-box;
-            outline: none;
-            overflow: hidden;
-            cursor: pointer;
-            position: relative;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            display: inline-flex;
-            white-space: nowrap;
-            font-size: 0.8rem;
-            background: #fff;
-            color: #000;
-        }
     }
 }
