--- a/src/components/ChannelContent/ChannelContent.scss
+++ b/src/components/ChannelContent/ChannelContent.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
 
-    &_headers {
+    &_header {
         background: var(--main-bg);
 
         hr {
@@ -18,113 +18,102 @@
             border: none;
         }
     }
+}
 
-    &_content {
-        height: 400px;
-        background: var(--main-bg);
-    }
+.channel_profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
-    &_profile {
+    &_container {
+        width: 1284px;
         display: flex;
-        justify-content: center;
+        margin: 16px 0 4px 0;
         align-items: center;
-        flex-direction: column;
+    }
+}
 
-        &_container {
-            width: 1284px;
-            display: flex;
-            margin: 16px 0 4px 0;
-            align-items: center;
-        }
+.channel_profile_image_container {
+    width: 80px;
+    height: 80px;
+    margin-right: 20px;
 
-        &_image_container {
-            width: 80px;
-            height: 80px;
-            margin-right: 20px;
-        }
+    img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+    }
+}
 
-        &_image {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-        }
-
-        &_content {
-            &_container {
-                width: 1180px;
-                display: flex;
-                align-items: center;
-            }
-
-            &_meta {
-                width: 958px;
-                color: #fff;
-            }
-
-            &_button {
-                width: 222px;
-            }
-
-            &_name {
-                font-size: 24px;
-            }
-
-            &_sub {
-                font-size: 15px;
-            }
-
-            &_button_container {
-                display: flex;
-                align-items: center;
-            }
-
-            &_button {
-                width: 110px;
-                font-size: 14px;
-                padding: 10px;
-                background: #3ea6ff;
-                border-radius: 24px;
-                text-align: center;
-                color: #000;
-                font-weight: 500;
-                margin-right: 5px;
-            }
-        }
+.channel_profile_content {
+    &_container {
+        width: 1180px;
+        display: flex;
+        align-items: center;
     }
 
-    &_tab {
-        &_container {
-            display: flex;
-            justify-content: center;
-        }
+    &_meta {
+        width: 958px;
+        color: #fff;
+    }
 
-        &_inner_container {
-            width: 1284px;
-            display: flex;
-            align-items: center;
+    &_name {
+        font-size: 24px;
+    }
 
-            &:first-child {
-                margin-left: 10px;
-            }
-        }
+    &_sub {
+        font-size: 15px;
+    }
+}
 
-        &_item {
-            padding: 24px 30px 14px;
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.3);
-            text-align: center;
+.channel_profile_content_button_container {
+    display: flex;
+    align-items: center;
 
-            &:hover {
-                color: #fff;
-            }
+    div {
+        width: 110px;
+        font-size: 14px;
+        padding: 10px;
+        background: #3ea6ff;
+        border-radius: 24px;
+        text-align: center;
+        color: #000;
+        font-weight: 500;
+        margin-right: 5px;
+    }
+}
 
-            // &:first-child {
-            //     border-bottom: 3px solid #eee;
-            //     color: #fff;
-            // }
+.channel_tab_container {
+    display: flex;
+    justify-content: center;
+}
 
+.channel_tab_item_container {
+    width: 1284px;
+    display: flex;
+    align-items: center;
+    color: rgba(255, 255, 255, 0.3);
+
+
+    &:first-child {
+        margin-left: 10px;
+    }
+
+    div {
+        padding: 24px 30px 14px;
+        font-size: 14px;
+        text-align: center;
+
+        &:hover {
+            color: #fff;
         }
     }
+}
+
+.channel_content {
+    height: 400px;
+    background: var(--main-bg);
 }
 
 .channel_tab_item_active {
