--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,5 @@
 @import '../../styles/common.scss';
 
-
 .header {
     display: flex;
     height: 60px;
@@ -9,37 +8,24 @@
     position: fixed;
     background-color: var(--main-bg);
     z-index: 100;
+}
 
-    &_container {
-        width: 100%;
-        height: 60px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 16px;
-        box-sizing: border-box;
-    }
+.header_container {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 16px;
+    box-sizing: border-box;
+}
 
+.header {
     &_left {
         display: flex;
         flex-direction: row;
         align-items: center;
-    }
-
-    &_nav_button {
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        padding: 8px;
-    }
-
-    &_logo {
-        // margin-left: 20px;
-        cursor: pointer;
-        font-size: 24px;
-        color: #fff;
-        padding: 16px 18px 14px;
     }
 
     &_center {
@@ -56,31 +42,42 @@
     }
 }
 
-.search {
-    &_box {
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+.header_nav_button {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 8px;
+}
 
-    &_container {
-        height: 40px;
-        display: flex;
-        align-items: center;
-        border: 1px solid var(--searchbar-border-color);
-        border-right: none;
-        border-radius: 40px 0 0 40px;
-        background-color: var(--main-background);
-        ;
-    }
+.header_logo {
+    cursor: pointer;
+    font-size: 24px;
+    color: #fff;
+    padding: 16px 18px 14px;
+}
 
-    &_form {
+
+.search_box {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search_container {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--searchbar-border-color);
+    border-right: none;
+    border-radius: 40px 0 0 40px;
+    background-color: var(--main-background);
+
+    form {
         margin-left: 10px;
-
     }
 
-    &_input {
+    input {
         border: none;
         height: 30px;
         width: 500px;
@@ -89,18 +86,19 @@
         outline: none;
         padding: 2px 6px;
     }
+}
 
-    &_icon {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 64px;
-        height: 40px;
-        color: #eee;
-        border: 1px solid var(--searchbar-border-color);
-        border-radius: 0 40px 40px 0;
-        background: var(--searchbar-button-color);
-    }
+.search_icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 40px;
+    color: #eee;
+    border: 1px solid var(--searchbar-border-color);
+    border-radius: 0 40px 40px 0;
+    background: var(--searchbar-button-color);
+
 }
 
 input::-webkit-input-placeholder {
