--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -3,8 +3,7 @@
 .detail_container{
     display: flex;
     flex-direction: row;
-    padding: 0 20px;
-    padding-top: 60px;
+    padding: 70px 20px 0;
 }
 
 .detail_content_container{
@@ -17,7 +16,7 @@
 }
 
 .detail_content_video_container{
-    width: 500px;
+    width: 1250px;
 
     video{
         width: 100%;
