--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,6 +3,7 @@
     --sidebar-bt-bg: rgba(255, 255, 255, 0.1);
     --category-bt-bg: rgba(255, 255, 255, 0.1);
     --studio-bg: #282828;
+    --detail-tag-blue : #3ea6ff;
     --searchbar-border-color: hsl(0, 0%, 18.82%);
     --searchbar-button-color: hsla(0, 0%, 100%, 0.08);
 }
