link 수정, video 수정, code refactoring

--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -29,10 +29,11 @@
     video {
         width: 100%;
         border-radius: 12px;
+        cursor: pointer;
 
         &:hover {
-            position: absolute;
-            width: 500px;
+            // position: absolute;
+            width: 120%;
             z-index: 10;
         }
     }
