--- a/src/components/Sidebar/StudioSidebar.scss
+++ b/src/components/Sidebar/StudioSidebar.scss
@@ -73,7 +73,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            color: #fff;
+            color: #aaa;
         }
 
         &_icon {
